--- a/project/styles.css
+++ b/project/styles.css
@@ -1,4 +1,4 @@
-/* apply a natural box layout model to all elements, 
+/* apply a natural box layout model to all elements,
 but allowing components to change */
 html {
   box-sizing: border-box;
@@ -8,14 +8,97 @@ html {
 }
 
 body {
-
+  font-family: 'Dancing Script', cursive;
+  font-size: 16px;
 }
 main {
-  width: 655px;
+  max-width: 655px;
   margin: 0 auto;
+  position: relative;
   background: #f1f1f1;
   padding: 50px 40px 60px 40px;
+  margin-top: 90px;
 }
 h1 {
+  color: blue;
+}
+
+.fa-bomb {
+  font-size: 190px;
+  float: left;
+
+  /* shapes not supported in IE or Firefox */
+  shape-outside: polygon(0px 55px, 0 198px, 130px 205px, 168px 122px, 165px 55px, 210px 45px, 209px 0px, 150px 0px);
+}
+
+.fa-code {
+  position: absolute;
+  bottom: 10px;
+  right: 50px;
+  font-size: 200px;
+  opacity: .1;
   color: #B109AA;
+}
+
+.heart-pulse {
+  color: #B109AA;
+  display: inline-block;
+  animation: pulse 2s infinite;
+}
+
+.heart-falling {
+  position: absolute;
+  color: red;
+  opacity: .5;
+  font-size: 22px;
+  animation: falling 6s infinite linear;
+}
+.heart-falling:nth-of-type(1) {
+  bottom: 1200px;
+  left: 2%;
+}
+.heart-falling:nth-of-type(2) {
+  bottom: 500px;
+  left: 15%;
+}
+.heart-falling:nth-of-type(3) {
+  bottom: 1000px;
+  left: 50%;
+}
+.heart-falling:nth-of-type(4) {
+  bottom: 475px;
+  left: 80%;
+}
+.heart-falling:nth-of-type(5) {
+  bottom: 600px;
+  left: 40%;
+}
+.heart-falling:nth-of-type(6) {
+  bottom: 1200px;
+  left: 60%;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.5);
+  }
+}
+
+@keyframes falling {
+  0% {
+    transform: rotate(360deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    bottom: -25px;
+    transform: rotate(-360deg);
+  }
 }
